style/PedalBoard.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.output-box {
		background-color:#F6F6F6;
		display: inline-block;
    border: 1px solid black;
		position: absolute;
    z-index: 91;
		margin: 1px;
		min-height: 135px;
		min-width: 270px;
}

.output-box > .header > .fa-bars {
    font-size: 1.5em;
    position: absolute;
    top: 8px;
    right: 9px;
}

.full-width {
		width: 100%;
}

.menu-icon {
    height: 11px;
    margin-left: 4px;
	  cursor: pointer;
}

.menu-icon#page-main-menu {
    height: 22px;
    line-height: 23px;
    margin: 5px;
    margin-right: 4px;
    font-size: 3em;
}

.close-button {
    position: absolute;
    top: 6px;
    right: 6px;
    padding: 0px 5px;
}

.renameable {
		cursor: pointer;
}

.renameable:hover {
	text-decoration: underline;
}

.output-box > *:not(.ui-resizable-handle) {
    padding: 10px;
	width: 100%;
}

.output-box > .header {
	margin: 0;
	background-color: #C6EAB5;
	border-bottom: 1px solid #A2A2A2;
	line-height: 1em;
	color: black;
}

.single-pedal-data {
	background-color: #eee;
	border-radius: 5px;
	border: 1px solid #ddd;
	padding: 4px;
	cursor: pointer;
}

.single-pedal-data > .price{
	display: inline-block;
	min-width: 39px;
}

.single-pedal-data:not(:last-child) {
	margin-bottom: 4px;
}

.output-box > .header > .add,
.output-box .add-pedal {
	font-size: 2em;
	cursor: pointer;
	color: #999;
	float: right;
	padding-left: 10px;
}

.output-box > .header > h2 {
	display: inline;
}

h2 {
	margin: 0;
}

#content-container {
	margin-top: 37px;
}

.fixed {
	position: fixed;
}

header.fixed {
	top: 0;
	left: 0;
	width: 100%;
	background-color: #637B4C;
}

header > #add-new-board-box {
	border-left: 1px solid #777;
	padding: 2px;
}

header > #site-title {
	padding: 7px;
	font-weight: normal;
	text-decoration: none;
	color: white;
	font-size: 2em;
	float: left;
	font-weight: normal;
	text-align: center;
	line-height: 1em;
	border-right: 1px solid #aaa;
}

header > #add-new-board-box {
	border-left: 1px solid #aaa;
	padding: 2px;
}

header #page-main-menu {
	filter: invert(100%);
	-webkit-filter: invert(100%);
	opacity: 0.8;
}

header > #add-new-board-box:hover > #page-main-menu {
	opacity: 1;
}

header > #site-title:hover,
header #add-new-board-box:hover {
	background-color: #768E5F;
}


button {
	display: inline-block;
	padding: 2px 10px;
	font-size: 13px;
	font-weight: bold;
	line-height: 20px;
	color: #333;
	white-space: nowrap;
	vertical-align: middle;
	cursor: pointer;
	background-color: #eee;
	background-image: -webkit-linear-gradient(#fcfcfc, #eee);
	background-image: linear-gradient(#fcfcfc, #eee);
	border: 1px solid #d5d5d5;
	border-radius: 3px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-appearance: none;
	margin-right: 2px;
}

button:active {
	background-color: #dcdcdc;
	background-image: none;
	border-color: #b5b5b5;
	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
}

button:hover {
	text-decoration: none;
	background-color: #ddd;
	background-image: -webkit-linear-gradient(#eee, #ddd);
	background-image: linear-gradient(#eee, #ddd);
	border-color: #ccc;
}

*:focus {
	text-decoration: none;
	border-color: #51a7e8;
	outline: none;
	box-shadow: 0 0 5px rgba(81,167,232,0.5);
}

input {
	min-height: 34px;
	padding: 0;
	font-size: 13px;
	color: #333;
	vertical-align: middle;
	border: 1px solid #ccc;
	border-radius: 3px;
	outline: none;
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
	margin: 1px;
	width: 100%;
	padding-left: 5px;
}

.options-menu.main-page-menu {
	right: 2px;
	top: 40px;
	position: fixed;
}

.float-right {
	float: right;
}


.float-center {
	margin: 0 auto;
	width: 100%;
	margin-bottom: 10px;
}

.shadowed {
	box-shadow: 0 4px 5px 1px rgba(0,0,0,0.14);
}

.add-error-display {
	width: 250%;
	color: red;
	clear: both;
	display: none;
}

.add-error-display.visible {
	display: block;
	padding-top: 4px;
}

.footer {
	border-top: 1px solid #B1B1B1;
}

.pedal-search {
	width: 250px;
	border: 1px solid #C3C3C3;
}

body {
	font-family: Sans-Serif,Helvetica,Tahoma;
	font-size: 11px;
	background-color: #fdfdfd;
}

.pedal-info > div {
	display: inline-block;
	margin-right: 5px; 
	min-width: 33px;
}

.ui-widget-content.ui-autocomplete.ui-menu {
	background-color: #fff; /* important is bad, but the */
	background-image: none; /* jquery ui css looks worse */
	font-family: sans-serif, helvetica; 
}

.ui-widget-content.ui-autocomplete.ui-menu > .ui-menu-item {
	color: black;
}

.ui-widget-content.ui-autocomplete.ui-menu > .ui-menu-item.ui-state-focus {
	background-color: #4078c0;
	background-image: none;
	color: #fff;
	border: none;
	font-weight: normal;
}

.ui-draggable-handle {
	cursor: pointer;
}

.flipped {
	transform: rotate(180deg);
}

svg, img {
	transition: transform .3s ease;
}

.options-menu {
	background: #fff;
	border-radius: 3px;
	min-width: 100px;
	padding: 5px 0;
	position: absolute;
	top: 35px;
	z-index: 1001;
	right: -1px;
}

.options-menu:before {
    border-color: transparent transparent #fff transparent;
    border-style: solid;
    border-width: 9px;
    content: " ";
    left: 50%;
    margin-left: -9px;
    position: absolute;
    top: -18px;
    right: 8px;
    left: initial;
}

a, a:visited {
    color: #4183c4;
    text-decoration: none;
}

.options-menu > *:not(input) {
    display: block;
    font-size: 13px;
    padding: 5px 15px;
	cursor: pointer;
}

.options-menu > *:not(input):hover {
    background-color: #4183c4;
    color: #fff;
}

.fa-trash.trash-hover {
    background-color: #c77;   
}

.fa-trash {
    z-index: 15;
	position: absolute;
	width: 100%;
	text-align: center;
	top: 0;
	left: 0;
	height: 31px;
	background-color: #ee6;
}

.fa-trash:before {
	line-height: 31px;
	vertical-align: middle;
	font-size: 1.5em;
}

